# sleep-timer-gui

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SleepTimerInstaller.iss  tree.txt
.github/workflows/: release.yml
docs/: index.md
hello-iced/: Cargo.toml  build.sh  wsl-gui-check.sh
hello-iced/src/: main.rs
sleep-timer-gui/: Dockerfile  run-cargo-release.sh
src/: autostart.rs  log.rs  main.rs  tray.rs
