[package]
name = "sleep_timer_gui"
version = "1.0.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["window", "tokio"] }
chrono = "0.4"
anyhow = "1"
simplelog = "0.12"
tray-icon = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
rfd = "0.13"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "powrprof"] }

[package.metadata.appimage]
name = "SleepTimer"
icon = "icon.png"

[package.metadata.release]
tag-prefix = "v"
tag-name = "{{version}}"
sign-commit = false
push = true
consolidate-commits = true
pre-release-commit-message = "chore: prepare for release {{version}}"
release-commit-message = "chore: release {{version}}"
